src/css/main.css
/*@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");*/
/*@import url("fontawesome-all.min.css");*/

/* Stars and twinklins*/

.stars {
    background: url("../images/stars.png") repeat top center;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 630%;
    display: block;
}


/* Basic */

* {
    margin: 0;
    padding: 0;
    border: 0;
}

html {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    /*background: rgb(60, 42, 122);*/
    /*background: linear-gradient(180deg, rgba(60, 42, 122, 1) 35%, rgba(31, 41, 101, 1) 100%);*/
    /*background: rgb(0,21,96);*/
    /*background: radial-gradient(circle, rgba(0,21,96,1) 0%, rgba(9,9,121,1) 35%);*/
    background: rgb(0, 17, 77);
    background: linear-gradient(180deg, rgba(0, 17, 77, 1) 0%, rgba(0, 21, 96, 1) 58%);
    color: var(--white);
    font-family: var(--font-sans);
    font-size: var(--fz-xl);
    line-height: 1.3;
}

ol, ul {
    list-style: none;
}

a {
    display: inline-block;
    color: var(--light-slate);
    transition: color .2s ease-in-out;
}

a:hover {
    color: var(--blue);
    font-weight: bold;
    transition: var(--transition);
}

b, strong {
    font-weight: 600;
    color: #3e3e3e;
}

i, em {
    font-style: italic;
}

h1, h2, h3, h4, h5, h6 {
    color: var(--lightest-slate);
    font-weight: 600;
    line-height: 1.1;
    margin: 0 0 0.75em 0;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    text-decoration: none;
    color: inherit;
}

h2, h3, h4, h5, h6 {
    font-weight: 700;
}

h1 {
    font-size: 3.25em;
    letter-spacing: -0.025em;
    font-weight: 300;
}

h1 strong {
    font-weight: 700;
}

h2 {
    font-size: 2em;
    letter-spacing: -0.015em;
}

h3 {
    font-size: 1.5em;
    letter-spacing: -0.015em;
}

em, i {
    font-style: italic;
}

hr {
    border: 0;
    border-top: solid 1px #444;
    border-top-color: rgba(0, 0, 0, 0.35);
    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
    height: 1px;
    margin: 3em 0;
}


/* Global Container */

.global-container {
    display: flex;
    flex-direction: column;
    min-height: 85vh;
}

/* Header */

header {
    position: fixed;
    top: 0;
    width: 100%;
    padding: 5px 50px;
    box-shadow: 0 10px 30px -10px var(--header-bg);
    /*backdrop-filter: blur(3px);*/
    /*background-color: rgba(60, 42, 122, .9);*/
    /*background: rgb(0,21,96);*/
    /*background: radial-gradient(circle, rgba(0,21,96,1) 0%, rgba(9,9,121,1) 35%);*/
    background-color: var(--header-bg);

}

/*********** Nav ***********/

#nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    font-family: var(--font-mono);
    counter-reset: nav;
}


.logo img {
    position: relative;
    animation-name: logo-animation;
    animation-duration: 3s;
    animation-timing-function: ease-out;
    /*infinite;*/
}

@keyframes logo-animation {
    0% {
        transform: rotate(0deg);
        left: 0;
    }
    25% {
        transform: rotate(20deg);
        left: 0;
    }
    50% {
        transform: rotate(0deg);
        left: 280px;
    }
    55% {
        transform: rotate(0deg);
        left: 280px;
    }
    70% {
        transform: rotate(0deg);
        left: 280px;
    }
    100% {
        transform: rotate(-360deg);
        left: 0;
    }

}


#nav .logo a {
    padding: 0;
}

#nav a:hover {
    border-bottom: 1px solid var(--white);
}

#nav .logo img {
    width: 70px;
    height: 70px;
    cursor: pointer;
    transition: width;
}


.nav-links-container {
    display: flex;
}


.nav-links-container ol {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-links-container ol li {
    margin-right: 2vw;
    font-weight: bold;
}

.nav-links-container a {
    text-decoration: none;
}

.resume-button-container .resume-button {
    color: var(--blue);
    background-color: transparent;
    border: 1px solid var(--blue);
    border-radius: 3px;
    padding: 0.5rem;
    font-weight: bolder;
    cursor: pointer;
    transition: var(--transition);
}

.resume-button-container .resume-button:hover, .email-link:hover {
    background: var(--blue);
    color: var(--header-bg);
    transition: 500ms;
    border: 1px solid var(--header-bg) !important;
}


.nav-links-container ol li a {
    padding: 10px;
}

.nav-links-container ol li a::before {
    counter-increment: nav;
    content: "0" counter(nav) ".";
    margin-right: 5px;
    color: var(--blue);
    font-size: var(--fz-sm);
    font-weight: bold;
    text-align: right;
}


.intro {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    margin-bottom: 10px;
}


/*Animation*/

#coding-animation {
    padding: 100px 0 0 0;
    margin: 0 auto;
    animation: coding 2s ease;
    width: 200px;
    opacity: 1;
}

.content.responsive #coding-animation {
    opacity: 0;
}

@keyframes coding {
    from {
        transform: rotateY(0);
    }
    to {
        transform: rotateY(360deg);
    }
}

/* Main */

main {
    width: 100%;
    max-width: 1600px;
    min-height: 100vh;
    padding: 0 50px;
    counter-reset: section;
    margin: 0 auto;

}

section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0 auto;
    min-height: 80vh;
    max-width: 1000px;
}

.intro p {
    width: 90%;
    max-width: 90% !important;
}


.project {
    padding: 2% !important;
}

#contact p {
    width: 100% !important;
}

#nav:hover {
    opacity: 1;
}

/* Intro */

.intro h1 {
    color: var(--blue);
    font-family: var(--font-mono);
    font-size: 30px;
}

.content h2, .content h3 {
    margin: 0;
    font-size: clamp(40px, 8vw, 80px);
}

.content h3 {
    color: var(--white);
}

.intro p {
    color: var(--white);
    margin-top: 20px;
    max-width: 70%;
}
/* ... */

